# python-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
{{cookiecutter.project_name}}/tests/: test_package.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_name_snake}}/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_name_snake}}/cli/: main.py
