[tool.poetry]
name = "{{cookiecutter.__project_name_snake}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.owner}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"
typer = "0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
mypy = "1.7.0"
ruff = "0.1.5"
black = "23.11.0"


[tool.poetry.scripts]
"{{cookiecutter.__project_name_kebab}}" = "{{cookiecutter.__project_name_snake}}.cli.main:entrypoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
